[1838] Fix computation of Feature.getType
Bug: https://github.com/eclipse-syson/syson/issues/1838
Signed-off-by: Arthur Daussy <arthur.daussy@obeo.fr>